plugins {
    id('idea')
    id 'application'
    id 'checkstyle'
    id 'io.ebean' version '13.20.1'
    id 'jacoco'
    id 'com.github.ben-manes.versions' version '0.47.0'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.javalin:javalin:5.6.1'
    implementation 'io.javalin:javalin-rendering:5.6.0'
    implementation 'org.slf4j:slf4j-simple:2.0.7'

    implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.1'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
    implementation 'org.webjars:bootstrap:5.3.0'

    implementation 'com.h2database:h2:2.2.220'
    implementation 'org.postgresql:postgresql:42.6.0'

    implementation 'io.ebean:ebean:' + findProperty('io.ebean')
    implementation 'io.ebean:ebean-ddl-generator:' + findProperty('io.ebean')
    implementation 'io.ebean:ebean-querybean:' + findProperty('io.ebean')
    implementation 'io.ebean:ebean-migration:13.9.0'
    implementation 'io.ebean:ebean-annotation:8.4'
    annotationProcessor 'io.ebean:querybean-generator:' + findProperty('io.ebean')


    // NOTE: ebean-ddl-generator требует старые зависимости, которых нет в java 9 и выше
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
    implementation 'javax.activation:activation:1.1.1'

    implementation 'org.jsoup:jsoup:1.16.1'
    implementation 'com.konghq:unirest-java:4.0.0-RC2'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0-RC2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0-RC2'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'io.ebean:ebean-test:' + findProperty('io.ebean')
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'

    compileOnly 'org.projectlombok:lombok:' + findProperty('org.projectlombok')
    annotationProcessor 'org.projectlombok:lombok:' + findProperty('org.projectlombok')
    testAnnotationProcessor 'org.projectlombok:lombok:' + findProperty('org.projectlombok')
    testCompileOnly 'org.projectlombok:lombok:' + findProperty('org.projectlombok')
}

test {
    useJUnitPlatform()
}

compileJava {
    options.release = 17
}

application {
    mainClass = 'hexlet.code.App'
}

task generateMigrations(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'hexlet.code.db.versioning.GenerateDbMigration'
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

checkstyle {
    toolVersion '9.0'
}
